tests/ui-venial/attr-unsupported.stderr
error: unsupported attribute
 --> tests/ui-venial/attr-unsupported.rs:5:13
  |
5 |     #[serde(skip)]
  |             ^^^^
